# dating-app

./: .gitignore  App.tsx  README.md  REQUIREMENTS.md  app.json  package-lock.json  package.json
UI/navigation/: HomeStack.tsx  MatchesStack.tsx  (+3 more)
assets/: README.md
backend/: .env.example  .gitignore  DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements.txt  verify_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_12_26_1430-001_initial_schema.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  redis_client.py
backend/app/models/: __init__.py  matching.py  messaging.py  playground.py  profile.py  user.py
backend/app/schemas/: __init__.py
backend/auth/: README.md  __init__.py  auth_service.py  dependencies.py  exceptions.py  routes.py  schemas.py
backend/db/: README.md  __init__.py
backend/db/migrations/: alembic.ini
backend/db/migrations/alembic/: env.py
backend/db/models/: __init__.py  matching.py  messaging.py  playground.py  profile.py  user.py
backend/db/scripts/: checkpoint_verify.py  setup_database.py  test_migrations.py
backend/db/tests/: test_database_setup.py
backend/photo/: README.md  __init__.py  exceptions.py  local_storage.py  photo_service.py  routes.py  schemas.py  storage_interface.py
backend/profile/: README.md  __init__.py  exceptions.py  profile_service.py  schemas.py
backend/scripts/: init_db.sql  setup_database.py  test_migrations.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_redis_connection.py
(+16 files in other folders)
