[tool.poetry]
name = "pupmatch-backend"
version = "0.1.0"
description = "Backend API for PupMatch - A puppy dating application"
authors = ["PupMatch Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.219.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
celery = "^5.3.6"
boto3 = "^1.34.34"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.27.0"}
alembic = "^1.13.1"
geoalchemy2 = "^0.14.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
hypothesis = "^6.96.1"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
